<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    tools:context=".activity.ConfiguracoesActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/CircleImagePerfil"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/padrao"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cinza_claro"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CircleImagePerfil">

        <EditText
            android:id="@+id/editPerfilNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nome_do_usu_rio" />

        <ImageView
            android:id="@+id/imageAtualizarNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:background="@drawable/ic_edit_verde"
            android:contentDescription="@string/Auterar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/perfil_edit"
        android:textAlignment="center"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageButton
        android:id="@+id/imageButtonCamera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonGaleria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CircleImagePerfil"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_camera_alt_24" />

    <ImageButton
        android:id="@+id/imageButtonGaleria"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonCamera"
        app:layout_constraintTop_toTopOf="@+id/CircleImagePerfil"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_photo_24" />


</androidx.constraintlayout.widget.ConstraintLayout>